--- a/requirements.txt
+++ b/requirements.txt
@@ -1,83 +1,332 @@
-aiohappyeyeballs==2.4.3
-aiohttp==3.11.2
+absl-py==2.1.0
+aiofiles==22.1.0
+aiohttp==3.9.5
+aiohttp-cors==0.7.0
 aiosignal==1.3.1
-annotated-types==0.7.0
+aiosqlite==0.20.0
+ansicolors==1.1.8
 anyio==4.6.2.post1
+appdirs==1.4.4
+archspec @ file:///home/conda/feedstock_root/build_artifacts/archspec_1708969572489/work
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
 async-timeout==4.0.3
-asyncio==3.4.3
+atpublic==4.1.0
 attrs==24.2.0
-certifi==2024.8.30
-charset-normalizer==3.4.0
+babel==2.16.0
+backports.tarfile==1.2.0
+beatrix_jupyterlab @ file:///tmp/environments/base/pip/packages/beatrix_jupyterlab-2024.920.84202.tar.gz#sha256=2042fe2aae94ec01dfbcdba736f8c3637f2847197bde88fd769a353a86748415
+beautifulsoup4==4.12.3
+bidict==0.23.1
+bigframes==0.22.0
+bleach==6.2.0
+blessed==1.20.0
+boltons @ file:///home/conda/feedstock_root/build_artifacts/boltons_1711936407380/work
+Brotli @ file:///home/conda/feedstock_root/build_artifacts/brotli-split_1725267488082/work
+cachetools==5.5.0
+certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1725278078093/work/certifi
+cffi @ file:///home/conda/feedstock_root/build_artifacts/cffi_1725560520483/work
+charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1728479282467/work
 click==8.1.7
-dataclasses-json==0.6.7
+cloud-tpu-client==0.10
+cloudpickle==3.1.0
+colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
+colorful==0.5.6
+comm==0.2.2
+conda @ file:///home/conda/feedstock_root/build_artifacts/conda_1729155152784/work
+conda-libmamba-solver @ file:///home/conda/feedstock_root/build_artifacts/conda-libmamba-solver_1727359833193/work/src
+conda-package-handling @ file:///home/conda/feedstock_root/build_artifacts/conda-package-handling_1729006966809/work
+conda_package_streaming @ file:///home/conda/feedstock_root/build_artifacts/conda-package-streaming_1729004031731/work
+contourpy==1.3.1
+cryptography==43.0.3
+cupy-cuda12x==13.3.0
+cycler==0.12.1
+Cython==3.0.11
+dacite==1.8.1
+dataproc_jupyter_plugin==0.1.80
+db-dtypes==1.3.1
+debugpy==1.8.8
+decorator==5.1.1
+defusedxml==0.7.1
+Deprecated==1.2.15
+distlib==0.3.9
+distro @ file:///home/conda/feedstock_root/build_artifacts/distro_1704321475663/work
+dm-tree==0.1.8
+docker==7.1.0
+docstring_parser==0.16
+entrypoints==0.4
 exceptiongroup==1.2.2
+executing==2.1.0
+Farama-Notifications==0.0.4
 fastapi==0.115.5
-ffmpeg-python==0.2.0
+fastjsonschema==2.20.0
+fastrlock==0.8.2
 filelock==3.16.1
+fonttools==4.55.0
+fqdn==1.5.1
+frozendict @ file:///home/conda/feedstock_root/build_artifacts/frozendict_1728841320383/work
 frozenlist==1.5.0
 fsspec==2024.10.0
-future==1.0.0
+gcsfs==2024.10.0
+geopandas==1.0.1
+gitdb==4.0.11
+GitPython==3.1.43
+google-api-core==1.34.1
+google-api-python-client==1.8.0
+google-auth==2.36.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+google-cloud-aiplatform==1.72.0
+google-cloud-artifact-registry==1.13.1
+google-cloud-bigquery==3.25.0
+google-cloud-bigquery-connection==1.16.1
+google-cloud-bigquery-storage==2.27.0
+google-cloud-core==2.4.1
+google-cloud-datastore==1.15.5
+google-cloud-functions==1.18.1
+google-cloud-iam==2.16.1
+google-cloud-jupyter-config==0.0.10
+google-cloud-language==2.15.1
+google-cloud-monitoring==2.23.1
+google-cloud-resource-manager==1.13.1
+google-cloud-storage==2.14.0
+google-crc32c==1.6.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.66.0
+gpustat==1.0.0
 greenlet==3.1.1
+grpc-google-iam-v1==0.13.1
+grpcio==1.68.0
+grpcio-status==1.48.2
+gymnasium==1.0.0
 h11==0.14.0
-httpcore==1.0.6
-httpx==0.27.2
-httpx-sse==0.4.0
-idna==3.10
+h2 @ file:///home/conda/feedstock_root/build_artifacts/h2_1634280454336/work
+hpack==4.0.0
+htmlmin==0.1.12
+httplib2==0.22.0
+httptools==0.6.4
+humanize==4.11.0
+hyperframe @ file:///home/conda/feedstock_root/build_artifacts/hyperframe_1619110129307/work
+ibis-framework==7.1.0
+idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1726459485162/work
+ImageHash==4.3.1
+imageio==2.36.0
+importlib_metadata==8.4.0
+importlib_resources==6.4.5
+ipykernel==6.29.5
+ipython==8.21.0
+ipython-genutils==0.2.0
+ipython-sql==0.5.0
+ipywidgets==8.1.5
+isoduration==20.11.0
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
+jedi==0.19.2
+jeepney==0.8.0
 Jinja2==3.1.4
-jsonpatch==1.33
-jsonpointer==3.0.0
-langchain==0.3.7
-langchain-community==0.3.7
-langchain-core==0.3.18
-langchain-text-splitters==0.3.2
-langsmith==0.1.143
-llvmlite==0.43.0
+joblib==1.4.2
+json5==0.9.28
+jsonpatch @ file:///home/conda/feedstock_root/build_artifacts/jsonpatch_1695536281965/work
+jsonpointer @ file:///home/conda/feedstock_root/build_artifacts/jsonpointer_1725302897999/work
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter-events==0.10.0
+jupyter-http-over-ws==0.0.8
+jupyter-server-mathjax==0.2.6
+jupyter-ydoc==0.2.5
+jupyter_client==7.4.9
+jupyter_core==5.7.2
+jupyter_server==2.14.2
+jupyter_server_fileid==0.9.3
+jupyter_server_proxy==4.4.0
+jupyter_server_terminals==0.5.3
+jupyter_server_ydoc==0.8.0
+jupyterlab==3.6.8
+jupyterlab_git==0.44.0
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.13
+jupytext==1.16.4
+kernels-mixer==0.0.15
+keyring==25.5.0
+keyrings.google-artifactregistry-auth==1.1.2
+kfp==2.5.0
+kfp-pipeline-spec==0.2.2
+kfp-server-api==2.0.5
+kiwisolver==1.4.7
+kubernetes==26.1.0
+lazy_loader==0.4
+libmambapy @ file:///home/conda/feedstock_root/build_artifacts/mamba-split_1727883551957/work/libmambapy
+linkify-it-py==2.0.3
+llvmlite==0.41.1
+lz4==4.3.3
+mamba @ file:///home/conda/feedstock_root/build_artifacts/mamba-split_1727883551957/work/mamba
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-marshmallow==3.23.1
+matplotlib==3.7.3
+matplotlib-inline==0.1.7
+mdit-py-plugins==0.4.2
+mdurl==0.1.2
+memray==1.14.0
+menuinst @ file:///home/conda/feedstock_root/build_artifacts/menuinst_1731146967497/work
+mistune==3.0.2
 more-itertools==10.5.0
-mpmath==1.3.0
+msgpack==1.1.0
 multidict==6.1.0
-mypy-extensions==1.0.0
-networkx==3.2.1
-numba==0.60.0
-numpy==1.26.4
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
-openai-whisper==20240930
-orjson==3.10.11
-packaging==24.2
+multimethod==1.12
+multipledispatch==1.0.0
+nbclassic==1.1.0
+nbclient==0.10.0
+nbconvert==7.16.4
+nbdime==3.2.0
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.4.2
+notebook==6.5.7
+notebook_executor @ file:///tmp/environments/base/pip/packages/notebook_executor
+notebook_shim==0.2.4
+numba==0.58.1
+numpy==1.25.2
+nvidia-ml-py==11.495.46
+oauth2client==4.1.3
+oauthlib==3.2.2
+opencensus==0.11.4
+opencensus-context==0.1.3
+opentelemetry-api==1.27.0
+opentelemetry-exporter-otlp==1.27.0
+opentelemetry-exporter-otlp-proto-common==1.27.0
+opentelemetry-exporter-otlp-proto-grpc==1.27.0
+opentelemetry-exporter-otlp-proto-http==1.27.0
+opentelemetry-proto==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+overrides==7.7.0
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1718189413536/work
+pandas==2.0.3
+pandas-profiling==3.6.6
+pandocfilters==1.5.1
+papermill==2.6.0
+parso==0.8.4
+parsy==2.1
+patsy==1.0.1
+pendulum==3.0.0
+pexpect==4.9.0
+phik==0.12.4
+pillow==11.0.0
+pins==0.8.6
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1726613481435/work
+plotly==5.24.1
+pluggy @ file:///home/conda/feedstock_root/build_artifacts/pluggy_1713667077545/work
+prettytable==3.12.0
+prometheus_client==0.21.0
+prompt_toolkit==3.0.48
 propcache==0.2.0
-pydantic==2.9.2
-pydantic-settings==2.6.1
-pydantic_core==2.23.4
+proto-plus==1.25.0
+protobuf==3.20.3
+psutil==5.9.3
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py-spy==0.4.0
+pyarrow==14.0.2
+pyarrow-hotfix==0.6
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycosat @ file:///home/conda/feedstock_root/build_artifacts/pycosat_1696355758174/work
+pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1711811537435/work
+pydantic==1.10.19
+pydata-google-auth==1.8.2
+Pygments==2.18.0
+PyJWT==2.10.0
+pyogrio==0.10.0
+pyOpenSSL==24.2.1
+pyparsing==3.2.0
+pyproj==3.7.0
+PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1661604839144/work
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-python-multipart==0.0.17
+python-json-logger==2.0.7
+pytz==2024.2
+PyWavelets==1.7.0
 PyYAML==6.0.2
-regex==2024.11.6
-requests==2.32.3
-requests-toolbelt==1.0.0
+pyzmq==26.2.0
+ray==2.39.0
+referencing==0.35.1
+requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1717057054362/work
+requests-oauthlib==2.0.0
+requests-toolbelt==0.10.1
+retrying==1.3.4
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.9.4
+rpds-py==0.21.0
+rsa==4.9
+ruamel.yaml @ file:///home/conda/feedstock_root/build_artifacts/ruamel.yaml_1728765002497/work
+ruamel.yaml.clib @ file:///home/conda/feedstock_root/build_artifacts/ruamel.yaml.clib_1728724455198/work
+scikit-image==0.24.0
+scikit-learn==1.5.2
+scipy==1.11.4
+seaborn==0.12.2
+SecretStorage==3.3.3
+Send2Trash==1.8.3
+shapely==2.0.6
+shellingham==1.5.4
+simpervisor==1.0.0
+six==1.16.0
+smart-open==7.0.5
+smmap==5.0.1
 sniffio==1.3.1
-SQLAlchemy==2.0.35
-starlette==0.41.2
-sympy==1.13.1
+soupsieve==2.6
+SQLAlchemy==2.0.36
+sqlglot==19.9.0
+sqlparse==0.5.2
+stack-data==0.6.3
+starlette==0.41.3
+statsmodels==0.14.4
+tabulate==0.9.0
+tangled-up-in-unicode==0.2.0
 tenacity==9.0.0
-tiktoken==0.8.0
-torch==2.5.1
-tqdm==4.67.0
-triton==3.1.0
-typing-inspect==0.9.0
+tensorboardX==2.6.2.2
+terminado==0.18.1
+textual==0.86.2
+threadpoolctl==3.5.0
+tifffile==2024.9.20
+time-machine==2.16.0
+tinycss2==1.4.0
+tomli==2.1.0
+toolz==0.12.1
+tornado==6.4.1
+tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1730926118411/work
+traitlets==5.14.3
+truststore @ file:///home/conda/feedstock_root/build_artifacts/truststore_1729762363021/work
+typeguard==4.4.1
+typer==0.13.1
+types-python-dateutil==2.9.0.20241003
 typing_extensions==4.12.2
-urllib3==2.2.3
+tzdata==2024.2
+uc-micro-py==1.0.3
+uri-template==1.3.0
+uritemplate==3.0.1
+urllib3==1.26.20
 uvicorn==0.32.0
+uvloop==0.21.0
+virtualenv==20.27.1
+visions==0.7.5
+watchfiles==0.24.0
+wcwidth==0.2.13
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
 websockets==14.1
-yarl==1.17.1
+widgetsnbextension==4.0.13
+wordcloud==1.9.4
+wrapt==1.16.0
+xxhash==3.5.0
+y-py==0.6.2
+yarl==1.17.2
+ydata-profiling==4.6.0
+ypy-websocket==0.8.4
+zipp==3.21.0
+zstandard==0.23.0
