Initial API Release: VoxAI (#1)
* Add demo voices

* Ajuste no import do aquivo main

* Corrigi erros gerais

* add dockerfile building

* Adiciona ajustes para funcionar em docker-compose

* Add README

* add adjustments to the repository

* add warning filter in separate file

* adds improvements to the dockerfile

* Update Dockerfile

---------

Co-authored-by: ricardosreichert <ricardosreichert@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -16,11 +16,12 @@ build/
 
 # Arquivos de virtual environment
 venv/
-.env/
+.env
 .envrc
 .python-version
 .Python
 pip-log.txt
+.idx
 
 # Configurações do Jupyter Notebook
 .ipynb_checkpoints
@@ -52,3 +53,4 @@ coverage.xml
 # Diretórios do MyPy e arquivos temporários do Python
 .mypy_cache/
 .dmypy.json
+XTTS-v2
